# mypy

./: .gitignore  README.md  pyproject.toml  setup.py
satorchipy/: __init__.py  datefunctions.py  plotfunctions.py  quickplot.py  utilities.py
