[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "satorchipy"
version = "1.0.0"
authors = [
  { name="Steve Torchinsky", email="steve@satorchi.net" },
]
description = "My python gadgets"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "GPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/satorchi/mypy"
